# esp-dhs-client

./: .gitignore  CMakeLists.txt  README.md  efuse-summary.txt  efuse-table-example.txt  partitions.csv  sdkconfig  sdkconfig.old
components/configuration/: CMakeLists.txt  configuration.c
components/configuration/include/: configuration.h
components/dhs_atecc/: CMakeLists.txt  Kconfig.projbuild  dhs_atecc.c
components/dhs_atecc/include/: dhs_atecc.h
components/dhs_configuration/: CMakeLists.txt  dhs_configuration.c
components/dhs_configuration/include/: dhs_configuration.h
components/dhs_mqtt/: CMakeLists.txt  Kconfig.projbuild  dhs_mqtt.c
components/dhs_mqtt_connection/: CMakeLists.txt  Kconfig.projbuild  dhs_mqtt_connection.c
components/dhs_mqtt_connection/include/: dhs_mqtt_connection.h
components/dhs_wifi/: CMakeLists.txt  Kconfig.projbuild  dhs_wifi.c
components/dhs_wifi/include/: dhs_wifi.h
components/esp32_perfmon/: README.md  perfmon.c
components/mqtt_connection/: CMakeLists.txt  ca.crt  mqtt_connection.c
components/mqttcomponent/: CMakeLists.txt  mqttcomponent.c
components/print/: CMakeLists.txt  print.c
components/print/include/: print.h
components/serial/: CMakeLists.txt  serial.c
components/serial/include/: serial.h
components/ua_blink/: CMakeLists.txt  ua_blink.c
components/ua_blink/include/: ua_blink.h
components/ua_main/: CMakeLists.txt  Kconfig.projbuild  ua_main.c
components/ua_main/include/: ua_main.h
components/wifi/: CMakeLists.txt  Kconfig.projbuild  wifi.c
main/: CMakeLists.txt  main.c
(+1 files in other folders)
